# publicat

./: .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  launcher.py  start.bat  start.sh  test_sim.py  update_app.patch
.github/workflows/: release.yml
backend/: .env.example  pyproject.toml  test_s2_batch.py  test_s2_batch_debug.py  test_s2_batch_debug2.py  test_s2_batch_debug3.py  test_s2_batch_empty.py
backend/migrations/: env.py
backend/migrations/versions/: 74b89c9bb130_add_rss_feeds_table.py  93d34b18c5b0_add_is_acknowledged.py  9a9535bc33e9_add_topic_and_itemscore_schemas.py  9fe2d79dee52_initial_item_schema.py  a9816306f183_add_appconfig_and_summaries.py  d1e8d65277ec_add_tools_column.py  dc0c3426cecf_add_follow_and_is_starred.py  e1b577ae9509_add_display_name_to_follows.py
backend/scripts/: build_journal_registry.py  init_db.py
backend/src/: config.py  database.py  embeddings.py  main.py
backend/src/api/: dashboard.py  export.py  follows.py  items.py  rss.py  settings.py  topics.py
backend/src/llm/: anthropic.py  base.py  gemini.py  ollama.py  pipeline.py
backend/src/models/: app_config.py  follow.py  item.py  item_score.py  rss.py  topic.py
backend/src/schemas/: item.py  settings.py  topic.py
backend/src/sources/: base.py  oai_pmh.py  semantic_scholar.py
frontend/: index.html  lint_output.txt  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EditTopicModal.tsx  FilterBar.tsx  ItemCard.tsx
frontend/src/pages/: Disclaimer.tsx  Feed.tsx  (+4 more)
src/data/: journal_registry.json
(+1 files in other folders)
